# apogeeql

./: .gitattributes  README.md  README.rst  setup.cfg  setup.py
apogeeql/: apogeeql_main.py
apogeeql/Commands/: apogeeqlCmd.py
docs/sphinx/: apogeeql.rst  conf.py  index.rst  intro.rst
etc/: apogeeql.cfg  apogeeql.module  apogeeql_APO.cfg  apogeeql_LCO.cfg
python/1m/: CallEditFitsFunc.py
python/apogeeql/: __init__.py  actorFits.py  apogee1m_main.py  apogeeql_main.py  runQuickLook.py
python/apogeeql/1m/: CallEditFitsFunc.py  apogee1m.py
python/apogeeql/Commands/: __init__.py  apogeeqlCmd.py
python/apogeeql/etc/: apogeeql.cfg  schema.json
python/apogeeqlActor/: apogeeqlActor_main.py
ups/: apogeeql.table  apogeeqlActor.table
